fix: color select is too high

--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
@@ -7,7 +7,7 @@
 	min-width: 114px;
 	border-radius: 0;
 	background-color: rgba(0,0,0,.3);
-	z-index: @z-index-map-rotation;
+	z-index: @z-index-mouse-coordinate;
 	left: 0;
 	padding: 0 15px;
 	font-size: smaller;
